Fix a bug in MathJax inline equation.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script>
 MathJax = {
 tex: {
-inlineMath: [['\\\\(', '\\\\)']],
+inlineMath: [['\\(', '\\)']],
 tags: "none"
 }
 };
@@ -20,7 +20,7 @@ tags: "none"
 <script id="MathJax-script" async
 src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
 </script>
-<script src="https://use.fontawesome.com/62e0af05fc.js"></script>
+<script type="text/javascript" language="javascript" src="https://use.fontawesome.com/62e0af05fc.js"></script>
 <title>feiyilin</title>
 </head>
 <body class="nomathjax">
@@ -39,7 +39,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
 <div class="pure-u-1 pure-u-lg-1">
 <div class="text-post">
 <p>Someone once shows me the following code</p>
-<div class="syntax"><pre><span></span><span class="k">struct</span> <span class="n">Widget</span> <span class="p">{</span>
+<div class="syntax"><pre><span></span><span class="k">struct</span> <span class="nc">Widget</span> <span class="p">{</span>
     <span class="n">Widget</span><span class="p">()</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
     <span class="n">Widget</span><span class="p">(</span><span class="k">const</span> <span class="n">Widget</span><span class="o">&amp;</span> <span class="n">w</span><span class="p">)</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
     <span class="n">Widget</span><span class="p">(</span><span class="n">Widget</span><span class="o">&amp;&amp;</span> <span class="n">w</span><span class="p">)</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
@@ -246,7 +246,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 </div>
 <div class="footer">
-<div class="footer-text"> Last updated 2020-07-19 16:22:43 UTC, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2022-03-07 16:50:01 UTC, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </body>
 </html>
