Add LMS tutorial.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
 </div>
 </div>
 <div class="content pure-u-1 pre-u-lg-5-6">
+<h2><a href="lms.html">A Tutorial on Least Mean Square (LMS) Algorithm</a></h2>
+<div class="pure-g">
+<div class="pure-u-1 pure-u-lg-1">
+<div class="text-post">
+<p>I was once assigned a problem: there is a black box that maintains a float value; it has several interfaces to access that value</p>
+<ol>
+<li><b>estimate()</b>: return the estimated current value with noise,</li>
+<li><b>update(v)</b>: add delta \(v\) to the current value.</li>
+</ol>
+<p>And the goal is to set the black box to the target value. The straightforward solution is to use LMS algorithm (<a href="https://www.feiyilin.com/aec.html">here</a> for some mathematical explanation) to approach the target value. The procedure may look like</p>
+<p><a href="lms.html">More...</a></p>
+</div>
+</div>
+</div>
 <h2><a href="copy_swap_cpp.html">A Tutorial on C++ Copy and Swap Idiom</a></h2>
 <div class="pure-g">
 <div class="pure-u-1 pure-u-lg-1">
@@ -246,7 +260,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 </div>
 <div class="footer">
-<div class="footer-text"> Last updated 2022-03-07 16:50:01 UTC, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2022-03-07 17:26:27 UTC, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </body>
 </html>
