--- a/rotate.html
+++ b/rotate.html
@@ -8,19 +8,21 @@
 <link rel="stylesheet" href="css/menu.css" type="text/css">
 <script>
 MathJax = {
+loader: {
+load: ['[tex]/tagformat']
+},
 tex: {
+packages: {'[+]': ['tagformat']},
 inlineMath: [['\\(', '\\)']],
-tags: "all"
+tags: "all",
+tagformat: {
+id: (id) => 'mjx-eqn-' + id.replace(/\s/g, '_'),
+}
 }
 };
 </script>
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async
-src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js">
-</script>
-<script src="https://code.jquery.com/jquery-3.7.0.min.js"
-integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-crossorigin="anonymous"></script>
+<script src=" https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.min.js "></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script type="text/javascript" language="javascript" src="js/bsmdoc.js"></script>
 <script type="text/javascript" language="javascript" src="js/menu.js"></script>
 <title>A Tutorial on Rotation</title>
@@ -37,18 +39,19 @@ crossorigin="anonymous"></script>
 <li><a href="#sec-2">2 Frame</a><ul>
 <li><a href="#sec-2-1">2.1 ECEF</a></li>
 <li><a href="#sec-2-2">2.2 NED</a></li>
-<li><a href="#sec-2-3">2.3 Satellite</a></li>
-<li><a href="#sec-2-4">2.4 Body</a></li>
+<li><a href="#sec-2-3">2.3 ENU</a></li>
+<li><a href="#sec-2-4">2.4 Satellite</a></li>
+<li><a href="#sec-2-5">2.5 Body</a><ul>
+<li><a href="#sec-2-5-1">2.5.1 Pitch and Roll with Accelerometer</a></li>
+<li><a href="#sec-2-5-2">2.5.2 Gyroscope</a></li>
 </ul></li>
-<li><a href="#sec-3">3 Frame Rotation</a><ul>
-<li><a href="#sec-3-1">3.1 Satellite to ECEF</a></li>
-<li><a href="#sec-3-2">3.2 ECEF to NED</a></li>
-<li><a href="#sec-3-3">3.3 NED to Body</a></li>
 </ul></li>
-<li><a href="#sec-4">4 Rotation Representation</a><ul>
-<li><a href="#sec-4-1">4.1 Euler angle</a></li>
-<li><a href="#sec-4-2">4.2 Direct Cosine Matrix (DCM)</a></li>
-<li><a href="#sec-4-3">4.3 Quaternion</a></li>
+<li><a href="#sec-3">3 Rotation Representation</a><ul>
+<li><a href="#sec-3-1">3.1 Euler Angle</a><ul>
+<li><a href="#sec-3-1-1">3.1.1 Gimbal Lock</a></li>
+</ul></li>
+<li><a href="#sec-3-2">3.2 Direct Cosine Matrix (DCM)</a></li>
+<li><a href="#sec-3-3">3.3 Quaternion</a></li>
 </ul></li>
 </ul>
 </div>
@@ -58,6 +61,7 @@ A Tutorial on Rotation
 </div>
 <div class="content">
 <h1 id="sec-1">1 Rotation</h1>
+<p>Rotation is critical to many applications, e.g., navigation. For 2D rotation, it is trivial. However, for 3D case, it is much more complicated and confusing.</p>
 <h2 id="sec-1-1">1.1 Rotate vector around axis</h2>
 <p>To rotate around the \(z\)-axis, point the thumb of right hand to the positive \(z\) direction, the curled finger points to the positive rotation direction, i.e., from \(x\)-axis to \(y\)-axis, as show in following figure</p>
 <figure class="figure">
@@ -69,7 +73,7 @@ A Tutorial on Rotation
 <img src="./image/rotate_z_xy.svg" alt="./image/rotate_z_xy.svg">
 <figcaption class="caption"><span class="tag">Fig.2.</span> Rotate around \(z\) axis</figcaption>
 </figure>
-<p>If we have a vector \(\vec{r} = [0, 0, 1]^T\), a unit vector on \(z\)-axis, after rotating around \(z\)-axis by \(\psi\), it is easy to see that its coordinate will be unchanged (i.e., \([0, 0, 1]\)).</p>
+<p>If we have a vector \(\vec{r} = [0, 0, 1]^T\), a unit vector on \(z\)-axis, after rotating around \(z\)-axis by \(\psi\) (i.e., yaw), it is easy to see that its coordinate will be unchanged (i.e., \([0, 0, 1]\)).</p>
 <p>Suppose \(\vec{r} = [1, 0, 0]^T\), a unit vector on \(x\)-axis, and rotate around the \(z\)-axis by \(\psi\), we will get \(\vec{r}^\prime\). What will be the coordinate of \(\vec{r}^\prime\)?</p>
 <figure class="figure">
 <img src="./image/rotate_z_xy_rotate.svg" alt="./image/rotate_z_xy_rotate.svg">
@@ -113,7 +117,7 @@ $$
 $$
 </div>
 <p>It is easy to see that 1st column of \(\mathbf{R}\) is just the coordinate of rotated unit vector of \(x\)-axis, that is after rotation, \([1, 0, 0]^T\) will become \([\cos\psi, \sin\psi, 0]^T\). Same for the 2nd and 3rd columns.</p>
-<p>The rotation around \(x\) is very similar, as shown in the following image.</p>
+<p>The rotation around \(x\) is very similar (\(phi\), i.e., roll), as shown in the following image.</p>
 <figure class="figure">
 <img src="./image/rotate_x_yz_rotate.svg" alt="./image/rotate_x_yz_rotate.svg">
 <figcaption class="caption"><span class="tag">Fig.4.</span> Rotate \(\vec{r}\) around \(x\) axis by \(\phi\) degree</figcaption>
@@ -131,7 +135,7 @@ $$
 \end{align}
 $$
 </div>
-<p>The rotation around \(y\) is also similar, as shown in the following image.</p>
+<p>The rotation around \(y\) is also similar (\(\theta\), i.e., pitch), as shown in the following image.</p>
 <figure class="figure">
 <img src="./image/rotate_y_xz_rotate.svg" alt="./image/rotate_y_xz_rotate.svg">
 <figcaption class="caption"><span class="tag">Fig.5.</span> Rotate \(\vec{r}\) around \(y\) axis by \(\theta\) degree</figcaption>
@@ -470,9 +474,9 @@ $$
 <h2 id="sec-2-2">2.2 NED</h2>
 <p>North, east, down (NED) coordinate system is shown in Fig. (<a href="#img-rotate_ned_frame">14</a>),</p>
 <ol>
-<li>\(z\)-axis is down to the earth center</li>
-<li>\(x\)-axis is tangent to meridians (to north)</li>
-<li>\(y\)-axis is tangent to parallels (circles from same same latitude) (to east)</li>
+<li>\(x\)-axis is tangent to meridians (to north),</li>
+<li>\(y\)-axis is tangent to parallels (circles from same same latitude) (to east),</li>
+<li>\(z\)-axis is down to the earth center (to down).</li>
 </ol>
 <figure id="img-rotate_ned_frame" class="figure">
 <img src="./image/rotate_ned_frame.svg" alt="./image/rotate_ned_frame.svg">
@@ -488,7 +492,7 @@ $$
 <div class="mathjax">
 $$
 \begin{align}
-\mathbf{R}_{NED}^{EDEF} &= \mathbf{R}_z(az)\mathbf{R}_{y^\prime}(-el-90).
+\mathbf{R}_{NED}^{ECEF} &= \mathbf{R}_z(az)\mathbf{R}_{y^\prime}(-el-90).
 \end{align}
 $$
 </div>
@@ -504,20 +508,185 @@ $$
 \end{align}
 $$
 </div>
-<h2 id="sec-2-3">2.3 Satellite</h2>
-<h2 id="sec-2-4">2.4 Body</h2>
-<h1 id="sec-3">3 Frame Rotation</h1>
-<h2 id="sec-3-1">3.1 Satellite to ECEF</h2>
-<h2 id="sec-3-2">3.2 ECEF to NED</h2>
-<h2 id="sec-3-3">3.3 NED to Body</h2>
-<h1 id="sec-4">4 Rotation Representation</h1>
-<h2 id="sec-4-1">4.1 Euler angle</h2>
-<h2 id="sec-4-2">4.2 Direct Cosine Matrix (DCM)</h2>
-<h2 id="sec-4-3">4.3 Quaternion</h2>
+<h2 id="sec-2-3">2.3 ENU</h2>
+<p>East, north, up (ENU) coordinate system (Fig. (<a href="#img-rotate_enu_frame">15</a>)) is very close to NED coordinate system.</p>
+<ol>
+<li>\(x\)-axis is tangent to parallels (circles from same same latitude) (to east),</li>
+<li>\(y\)-axis is tangent to meridians (to north),</li>
+<li>\(z\)-axis is up from the earth center (to up).</li>
+</ol>
+<figure id="img-rotate_enu_frame" class="figure">
+<img src="./image/rotate_enu_frame.svg" alt="./image/rotate_enu_frame.svg">
+<figcaption class="caption"><span class="tag">Fig.15.</span> East, north, up (ENU) frame</figcaption>
+</figure>
+<p>Rotation from ENU frame to ECEF frame,</p>
+<div class="mathjax">
+$$
+\vec{r}_{ECEF} - \vec{O}_{ECEF}  = \mathbf{R}_z(az)\mathbf{R}_{y^\prime}(90-el) \mathbf{R}_{z^{\prime\prime}}(90)\vec{r}_{ENU},
+$$
+</div>
+<p>where \(\vec{r}_{ENU}\) is the coordinates in ENU frame, \(\vec{r}_{ECEF}\) is the corresponding coordinates in ECEF frame, and \(\vec{O}_{ECEF}\) is the origin of the NED frame in ECEF frame. The rotation matrix can be written as</p>
+<div class="mathjax">
+$$
+\begin{align}
+\mathbf{R}_{ENU}^{ECEF} &= \mathbf{R}_z(az)\mathbf{R}_{y^\prime}(90-el)\mathbf{R}_{z^{\prime\prime}}(90).
+\end{align}
+$$
+</div>
+<p>Or the rotation matrix from ECEF frame to ENU frame is</p>
+<div class="mathjax">
+$$
+\begin{align}
+\mathbf{R}_{ECEF}^{ENU} &= \mathbf{R}_z(-90) \mathbf{R}_y(el-90)\mathbf{R}_z(-az) \\ \nonumber
+& = \begin{bmatrix} \sin(az) & \cos(az) & 0 \\
+ -sin(el)*\cos(az) & -\sin(az)*\sin(el) & \cos(el) \\
+ \cos(az)*\cos(el) & \sin(az)*\cos(el) & \sin(el) \\
+ \end{bmatrix}.
+\end{align}
+$$
+</div>
+<h2 id="sec-2-4">2.4 Satellite</h2>
+<p>Satellite frame is shown in Fig. (<a href="#img-rotate_satellite_frame">16</a>),</p>
+<ol>
+<li>\(x\)-axis is up from the earth center (to satellite),</li>
+<li>\(y\)-axis is in the polarization plane and along the electric field vector direction,</li>
+<li>\(z\)-axis is in the polarization plane and orthogonal to the \(y\)-axis (along the magnetic filed vector direction).</li>
+</ol>
+<figure id="img-rotate_satellite_frame" class="figure">
+<img src="./image/rotate_satellite_frame.svg" alt="./image/rotate_satellite_frame.svg">
+<figcaption class="caption"><span class="tag">Fig.16.</span> Satellite frame</figcaption>
+</figure>
+<p>Rotation from satellite frame to ECEF frame,</p>
+<div class="mathjax">
+$$
+\vec{r}_{ECEF} - \vec{O}_{ECEF}  = \mathbf{R}_z(az)\mathbf{R}_{y^\prime}(-el) \mathbf{R}_{x^{\prime\prime}}(pol)\vec{r}_{satellite},
+$$
+</div>
+<p>where \(\vec{r}_{satellite}\) is the coordinates in satellite frame, \(\vec{r}_{ECEF}\) is the corresponding coordinates in ECEF frame, and \(\vec{O}_{ECEF}\) is the origin of the NED frame in ECEF frame. The rotation matrix can be written as</p>
+<div class="mathjax">
+$$
+\begin{align}
+\mathbf{R}_{satellite}^{ECEF} &= \mathbf{R}_z(az)\mathbf{R}_{y^\prime}(-el)\mathbf{R}_{x^{\prime\prime}}(pol).
+\end{align}
+$$
+</div>
+<p>Or the rotation matrix from ECEF frame to satellite frame is</p>
+<div class="mathjax">
+$$
+\begin{align}
+\mathbf{R}_{ECEF}^{satellite} &= \mathbf{R}_x(-pol) \mathbf{R}_y(el)\mathbf{R}_z(-az).
+\end{align}
+$$
+</div>
+<h2 id="sec-2-5">2.5 Body</h2>
+<p>Body frame is the user coordinate system, usually user can arbitrarily choose the coordinate system, e.g., when it is leveled on ground, and facing north, the body frame is same as NED frame, that is</p>
+<ol>
+<li>\(x\)-axis points to the nose of the body (or heading direction),</li>
+<li>\(y\)-axis points to the right of the \(x\)-axis (when facing forward),</li>
+<li>\(z\)-axis points down through the bottom of the body.</li>
+</ol>
+<p>In other words, in this case, when the body is facing north and leveled (yaw, pitch, roll are all \(0\)), its \(x\)-axis points north, \(y\)-axis points east, and \(z\)-axis points down to the earth center.</p>
+<p>The main task for many applications is to estimate the body orientation (i.e., yaw, pitch and roll). And inertial measurement unit (IMU) is usually attached to the body to help estimating the body orientation. In many cases, the body frame may be same as the IMU frame.</p>
+<h3 id="sec-2-5-1">2.5.1 Pitch and Roll with Accelerometer</h3>
+<p>When the IMU is leveled, its reading in NED frame is</p>
+<div class="mathjax">
+$$
+\vec{g}_{NED} = [0, 0, g],
+$$
+</div>
+<p>where \(g\) is the gravitational acceleration (e.g., \(\sim 9.81m/s^2\) on earth surface). It is easy to see that rotate around NED \(z\)-axis doesn't change the measured signal. The measurement is in IMU frame (or body frame)</p>
+<div class="mathjax">
+$$
+\vec{g}_{body} = \begin{bmatrix} a_x & a_y & a_z\end{bmatrix}.
+$$
+</div>
+<p>And define the rotation from IMU frame (body frame) to NED frame as</p>
+<div class="mathjax">
+$$
+\vec{g}_{NED} = \mathbf{R}_y(\theta) \mathbf{R}_x(\phi) \vec{g}_{body}.
+$$
+</div>
+<p>Or equivalently,</p>
+<div class="mathjax">
+$$
+\begin{align}
+\vec{g}_{body} &= (\mathbf{R}_y(\theta) \mathbf{R}_x(\phi))^T \vec{g}_{NED} \\ \nonumber
+&=\begin{bmatrix}
+\cos(\theta) & 0  & -\sin(\theta)\\
+\sin(\phi)*\sin(\theta)& \cos(\phi) & \sin(\phi)*\cos(\theta)\\
+\sin(\theta)*\cos(\phi) & -\sin(\phi) & \cos(\phi)*\cos(\theta)
+\end{bmatrix} \begin{bmatrix}
+0 \\ 0 \\ g
+\end{bmatrix},
+\end{align}
+$$
+</div>
+<p>then \(\theta\), \(\phi\) can be estimated as</p>
+<div class="mathjax">
+$$
+\begin{align}
+\theta &= \arcsin(\frac{-a_x}{g}), \\
+\phi &= \arctan(\frac{a_y}{a_z}).
+\end{align}
+$$
+</div>
+<h3 id="sec-2-5-2">2.5.2 Gyroscope</h3>
+<p>Gyroscope measures the angular velocity (e.g., \(deg/s\)), e.g.,</p>
+<div class="mathjax">
+$$
+\hat{\vec{\omega}} = \vec{\omega} + \vec{b} + \vec{n},
+$$
+</div>
+<p>where \(\vec{\omega}\) is the true angular velocity, \(\vec{b}\) is the bias, and \(\vec{n}\) is the additive noise.</p>
+<p>In practice, the gyroscope may send the measured angular velocity at some fixed rate (e.g., 200Hz), that is every \(\delta_t\) seconds. How do we use such information to update the orientation of the body/IMU?
+For example, at time index \(t-1\), we have the rotation matrix \(\mathbf{R}_{t-1}\), that maps arbitrary vector in body frame (\(\vec{r}_{t-1, body}\)) to NED frame (\(\vec{r}_{t-1, NED}\)),</p>
+<div class="mathjax">
+$$
+\vec{r}_{t-1, NED} = \mathbf{R}_{t-1} \vec{r}_{t-1, body},
+$$
+</div>
+<p>or</p>
+<div class="mathjax">
+$$
+\vec{r}_{t-1, body} = \mathbf{R}_{t-1}^T \vec{r}_{t-1, NED},
+$$
+</div>
+<p>And at time index \(t\) (i.e., \(\delta_t\) seconds after time index \(t-1\)), gyroscope sends out the angular velocity measurement \(\hat{\vec{w}}_t\). As \(\delta_t\) is so small, it is not unreasonable to think that \(\hat{\vec{w}}_t\) is constant over the last \(\delta_t\) seconds. And if we ignore the gryo bias \(\vec{b}\) for simplicity now, during the last \(\delta_t\) seconds, the body/IMU frame rotates with angle \(\hat{\vec{w}}_t \delta_t\). Thus the rotation from body/IMU frame of time \(t-1\) to \(t\) is</p>
+<div class="mathjax">
+$$
+\vec{r}_{t, body} = \mathbf{R}(-\hat{\vec{w}}_t \delta_t) \vec{r}_{t-1, body}.
+$$
+</div>
+<p>You may notice the negative sign before the rotation angle in the above equation. That's because the measured rotation is on the frame (coordination system) (i.e., passive rotation), if we want to apply the same rotation on the vector, it needs to be rotated in negative angle (active rotation).</p>
+<div class="mathjax">
+$$
+\vec{r}_{t, body} = \mathbf{R}(-\hat{\vec{w}}_t \delta_t)\mathbf{R}_{t-1}^T \vec{r}_{t, NED},
+$$
+</div>
+<p>or</p>
+<div class="mathjax">
+$$
+\vec{r}_{t, NED} = \mathbf{R}_{t-1}\mathbf{R}(\hat{\vec{w}}_t \delta_t) \vec{r}_{t, body}.
+$$
+</div>
+<p>The only remaining question is how to get the rotation matrix (e.g., \(\mathbf{R}(-\hat{\vec{w}}_t \delta_t)\)) from the gyro measurement. As shown in [<a id="cite-1-1" href="#reference-1">1</a>], for the measurement \(\hat{\vec{\omega}} = [\hat{\omega}_x, \hat{\omega}_y, \hat{\omega}_z]\), the corresponding rotation can be viewed at rotate around unit vector \(\frac{\hat{\vec{\omega}}}{\lVert \hat{\vec{\omega}}\rVert}\) by \(\lVert \hat{\vec{\omega}}\rVert \delta_t\) degree. The rotation matrix can be got with Eq. (\ref{eqn:rotate_vector}).</p>
+<h1 id="sec-3">3 Rotation Representation</h1>
+<h2 id="sec-3-1">3.1 Euler Angle</h2>
+<h3 id="sec-3-1-1">3.1.1 Gimbal Lock</h3>
+<h2 id="sec-3-2">3.2 Direct Cosine Matrix (DCM)</h2>
+<h2 id="sec-3-3">3.3 Quaternion</h2>
 </div>
 </div>
+<div class="reference">
+<ol>
+<li><div id="reference-1">
+Stan&#x010d;in, S.; Toma&#x017e;i&#x010d;, S. "Angle Estimation of Simultaneous Orthogonal Rotations from 3D Gyroscope Measurements". Sensors 2011, 11, 8536-8549. https://doi.org/10.3390/s110908536  <a href="#cite-1-1">&#8617;</a>
+</div></li>
+</ol>
+</div>
+
 <div class="footer">
-<div class="footer-text"> Last updated 2023-11-13 06:00:31 UTC by
+<div class="footer-text"> Last updated 2023-11-22 06:14:52 UTC by
 <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>.</div>
 </div>
 </div>
