Update rotate tutorial.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
 </div>
 </div>
 <div class="content pure-u-1 pre-u-lg-5-6">
+<h2><a href="rotate.html">A Tutorial on Rotation</a></h2>
+<div class="pure-g">
+<div class="pure-u-1 pure-u-lg-1-3">
+<div class="image-post">
+<a href="rotate.html"><img src="./image/rotate_z_xy_rotate.svg" alt="./image/rotate_z_xy_rotate.svg" width=260px></a>
+</div>
+</div>
+<div class="pure-u-1 pure-u-lg-2-3">
+<div class="text-post">
+<p>Rotation is critical to many applications, e.g., navigation. For 2D rotation, it is trivial. However, for 3D case, it is much more complicated and confusing. This tutorial tries to show some important concept in 3D rotation.</p>
+<p><a href="rotate.html">More...</a></p>
+</div>
+</div>
+</div>
 <h2><a href="lms.html">A Tutorial on Least Mean Square (LMS) Algorithm</a></h2>
 <div class="pure-g">
 <div class="pure-u-1 pure-u-lg-1">
@@ -53,19 +67,19 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
 <div class="pure-u-1 pure-u-lg-1">
 <div class="text-post">
 <p>Someone once shows me the following code</p>
-<div class="syntax"><pre><span></span><span class="k">struct</span> <span class="nc">Widget</span> <span class="p">{</span>
-    <span class="n">Widget</span><span class="p">()</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
-    <span class="n">Widget</span><span class="p">(</span><span class="k">const</span> <span class="n">Widget</span><span class="o">&amp;</span> <span class="n">w</span><span class="p">)</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
-    <span class="n">Widget</span><span class="p">(</span><span class="n">Widget</span><span class="o">&amp;&amp;</span> <span class="n">w</span><span class="p">)</span> <span class="o">=</span> <span class="k">default</span><span class="p">;</span>
-    <span class="n">Widget</span><span class="o">&amp;</span> <span class="k">operator</span><span class="o">=</span><span class="p">(</span><span class="n">Widget</span> <span class="n">obj</span><span class="p">)</span> <span class="p">{</span>
-        <span class="c1">// swap obj and this</span>
-        <span class="p">...</span>
-        <span class="k">return</span> <span class="o">*</span><span class="k">this</span><span class="p">;</span>
-    <span class="p">}</span>
+<div class="syntax"><pre><span></span><span class="k">struct</span><span class="w"> </span><span class="nc">Widget</span><span class="w"> </span><span class="p">{</span>
+<span class="w">    </span><span class="n">Widget</span><span class="p">()</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="k">default</span><span class="p">;</span>
+<span class="w">    </span><span class="n">Widget</span><span class="p">(</span><span class="k">const</span><span class="w"> </span><span class="n">Widget</span><span class="o">&amp;</span><span class="w"> </span><span class="n">w</span><span class="p">)</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="k">default</span><span class="p">;</span>
+<span class="w">    </span><span class="n">Widget</span><span class="p">(</span><span class="n">Widget</span><span class="o">&amp;&amp;</span><span class="w"> </span><span class="n">w</span><span class="p">)</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="k">default</span><span class="p">;</span>
+<span class="w">    </span><span class="n">Widget</span><span class="o">&amp;</span><span class="w"> </span><span class="k">operator</span><span class="o">=</span><span class="p">(</span><span class="n">Widget</span><span class="w"> </span><span class="n">obj</span><span class="p">)</span><span class="w"> </span><span class="p">{</span>
+<span class="w">        </span><span class="c1">// swap obj and this</span>
+<span class="w">        </span><span class="p">...</span>
+<span class="w">        </span><span class="k">return</span><span class="w"> </span><span class="o">*</span><span class="k">this</span><span class="p">;</span>
+<span class="w">    </span><span class="p">}</span>
 
-    <span class="c1">// member variables</span>
-    <span class="kt">int</span> <span class="n">id</span><span class="p">;</span>
-    <span class="p">...</span>
+<span class="w">    </span><span class="c1">// member variables</span>
+<span class="w">    </span><span class="kt">int</span><span class="w"> </span><span class="n">id</span><span class="p">;</span>
+<span class="w">    </span><span class="p">...</span>
 <span class="p">};</span>
 </pre></div>
 <p><a href="copy_swap_cpp.html">More...</a></p>
@@ -143,8 +157,8 @@ Ronald H. Coase, Essays on Economics and Economists
 <li>re-compile the program;</li>
 <li>check the results.</li>
 </ol>
-<p>And occasionally, I would need to add some debugging code. For example, printing some value (e.g., printf) to the terminal or dumping the data to a file, so that I can use other tools (e.g., Matlab) to visualize and analyze it.</p>
-<p>bsmedit aims to <b>simplify</b> this procedure. With bsmedit, we can</p>
+<p>And occasionally, I would need to add some debugging code. For example, printing some value (e.g., <code>printf</code>) to the terminal or dumping the data to a file, so that I can use other tools (e.g., Matlab) to visualize and analyze it.</p>
+<p>bsmedit aims to simplify this procedure. With bsmedit, we can</p>
 <ul>
 <li>control the simulation</li>
 <li>monitor the signals in real-time</li>
@@ -260,7 +274,7 @@ Simple C functions to easily process the console program arguments.</p></li>
 </div>
 </div>
 <div class="footer">
-<div class="footer-text"> Last updated 2022-03-07 17:26:27 UTC, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
+<div class="footer-text"> Last updated 2023-12-11 05:52:51 UTC, by <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>  | <a href="mailto:tq@feiyilin.com">Contact</a></div>
 </div>
 </body>
 </html>
