Update rotation tutorial.

--- a/rotate.html
+++ b/rotate.html
@@ -687,6 +687,7 @@ $$
 \end{align}
 $$
 </div>
+<p>NED frame is not well-defined at the poles. For example, at north pole, any direction is south, so no way to define <b>x</b>-axis that points to north.</p>
 <h2 id="sec-2-4">2.4 ENU</h2>
 <p>East, north, up (ENU) coordinate system, as shown in Fig. (<a href="#img-rotate_enu_frame">18</a>), is very close to NED coordinate system.</p>
 <ol>
@@ -724,6 +725,7 @@ $$
 \end{align}
 $$
 </div>
+<p>Similar to NED frame, ENU frame is also not well-defined at the poles. For example, at north pole, any direction is south, so no way to define <b>x</b>-axis that points to east.</p>
 <h2 id="sec-2-5">2.5 Satellite</h2>
 <p>Satellite frame is shown in Fig. (<a href="#img-rotate_satellite_frame">19</a>),</p>
 <ol>
@@ -1208,7 +1210,7 @@ Mike Day, "Converting a Rotation Matrix to a Quaternion", <a href="https://d3cw3
 </div>
 
 <div class="footer">
-<div class="footer-text"> Last updated 2024-02-05 01:33:05 UTC by
+<div class="footer-text"> Last updated 2024-04-05 04:08:42 UTC by
 <a href="http://bsmdoc.feiyilin.com/">bsmdoc</a>.</div>
 </div>
 </div>
